--- a/Projeto/seasons.html
+++ b/Projeto/seasons.html
@@ -44,10 +44,10 @@
         </div>
         <div class="row">
             <div class="col-sm-6 col-md-6 col-lg-6">
-                <div class="card center text-center border-dark">
+                <div class="card center text-center" style="border: 5px grey groove">
                     <div class="card-body">
                         <div class="card-title">
-                            <h1 class="card-header bg-success" data-bind="text: displayYear"></h1>
+                            <h1 class="card-header bg-success text-light" data-bind="text: displayYear" ></h1>
                         </div>
                         <div class="form-group input-group rounded" style="width: 30%; float: left; padding: 5px;">
                             <input class="form-control me-2" placeholder="Search Year" type="search" aria-label="Search" id="SearchText" style="height: 35px; width: 100px; border-radius: 1px;" />
